<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2022 Software and Sustainability Group - VU
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
    <string name="app_name">BatteryDrainer</string>
    <string name="cpu_stress">CPU stress</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_stress">Camera stress</string>
    <string name="sensors_stress">Sensors stress</string>
    <string name="location_stress">Location stress</string>
    <string name="network_stress">Network stress</string>
    <string name="gpu_stress">GPU stress</string>
    <string name="selected_components">Selected Components</string>
    <string name="energy_sources">Energy Sources</string>
    <string name="live_view">Live View</string>
    <string name="cpu_stress_choice">CPU stress choice</string>
    <string name="vibration">Vibration</string>
    <string name="location">Location</string>
    <string name="network">Network</string>
    <string name="sensors">Sensors</string>
    <string name="camera">Camera</string>
    <string name="gpu">GPU</string>
    <string name="cpu">CPU</string>
    <string name="seconds">Seconds</string>
    <string name="about">About</string>
    <string name="battery_status">Battery Status</string>
    <string name="remaining_battery">Remaining Battery</string>
    <string name="estimated_lifetime">Estimated Lifetime</string>
</resources>