<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:useDefaultMargins="true"
    android:columnCount="2"
    android:rowCount="6"
    tools:context=".SourceView">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cpuCard"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/ic_cpu"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cpu_stress_choice"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cpu"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/gpuCard"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/ic_gpu"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cpu_stress_choice"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gpu"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cameraCard"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/ic_baseline_camera_alt_24"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cpu_stress_choice"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sensorsCard"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/ic_baseline_speaker_phone_24"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cpu_stress_choice"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sensors"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/networkCard"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/ic_baseline_cloud_download_24"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cpu_stress_choice"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/network"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/locationCard"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/ic_baseline_location_on_24"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cpu_stress_choice"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</GridLayout>